--- a/index.tpl.html
+++ b/index.tpl.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My App</title>
-    <!-- <script src="node_modules/webpack-dev-server/bin/webpack-dev-server.js"></script> -->
+    <script src="http://localhost:8090/webpack-dev-server.js"></script>
 </head>
 <body>
     <div id="app"></div>
